Improve the compatibility of our scrollTop/Left/Height/Width, offsetWidth/offsetHeight,clientWidth/clientHeight on body and the root element. These aren't quite perfectly compatible, but should be clearly better...

This fixes core of #86794, #117163, and #130577 (amazon.com book reader 
 --- though error reporting popups seem to mess that
up a bit(!?))

CCBUG:86794
BUG:117163
BUG:130577


svn path=/branches/KDE/3.5/kdelibs/; revision=561392